# VectorDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  run_ingest.py
src/database/: duckdb_connector.py
src/ingest/: sitemap_ingestor.py
src/utils/: helpers.py
