[project]
name = "scrappy-vdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Thorpe"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb (>=1.2.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
